# photo_organizer

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust-clippy.yml  rust-tests.yml
src/: file_ops.rs  lib.rs  main.rs  runner.rs
tests/: integration_tests.rs
